--- a/restful-dms-ui/src/app/_add-document/add-document.component.scss
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.scss
@@ -1,3 +1,11 @@
 form div {
   margin-bottom: 30px;
 }
+
+.file-error-message {
+  position: absolute;
+  top: 34px;
+  left: 0;
+  font-size: .8rem;
+  color: #f44336;
+}
