--- a/restful-dms-ui/src/app/_add-document/add-document.component.html
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.html
@@ -11,7 +11,8 @@
       <!--Header-->
       <div class="modal-header text-center info-color-dark">
         <h4 class="modal-title white-text  w-100 font-weight-bold py-2">Subscribe</h4>
-        <button (click)="closeModal()" aria-label="Close" class="close" data-dismiss="modal" type="button">
+        <button (click)="closeModal()" [disabled]="showSpinner" aria-label="Close" class="close" data-dismiss="modal"
+                type="button">
           <span aria-hidden="true" class="white-text">&times;</span>
         </button>
       </div>
@@ -27,7 +28,7 @@
               Nazwa
               <span class="required-field"></span>
             </label>
-            <mdb-error *ngIf="title.invalid && (title.dirty || title.touched)">
+            <mdb-error *ngIf="title.invalid && (title.dirty || title.touched || wasSubmitted)">
               <span *ngIf="title.errors.required">Pole wymagane</span>
               <span *ngIf="title.errors.minlength">Minimalna ilość znaków: 3</span>
               <span *ngIf="title.errors.maxlength">Maksymalna ilość znaków: 50</span>
@@ -41,7 +42,7 @@
               Krótki opis
               <span class="required-field"></span>
             </label>
-            <mdb-error *ngIf="brief.invalid && (brief.dirty || brief.touched)">
+            <mdb-error *ngIf="brief.invalid && (brief.dirty || brief.touched || wasSubmitted)">
               <span *ngIf="brief.errors.required">Pole wymagane</span>
               <span *ngIf="brief.errors.minlength">Minimalna ilość znaków: 3</span>
               <span *ngIf="brief.errors.maxlength">Maksymalna ilość znaków: 80</span>
@@ -55,7 +56,7 @@
             <label for="description">
               Opis
             </label>
-            <mdb-error *ngIf="description.invalid && (description.dirty || description.touched)">
+            <mdb-error *ngIf="description.invalid && (description.dirty || description.touched || wasSubmitted)">
               <span *ngIf="description.errors.maxlength">Maksymalna ilość znaków: 255</span>
             </mdb-error>
           </div>
@@ -63,7 +64,8 @@
           <div class="md-form file-field">
             <input (change)="onFileChange($event)" id="file" name="file" style="width: 235px" type="file"/>
             <span class="required-field pb-3"></span>
-            <label *ngIf="showFileError" class="file-error-message">Plik musi być w formacie PDF</label>
+            <label *ngIf="fileError" class="file-error-message">Plik musi być w formacie PDF</label>
+            <label *ngIf="!file && wasSubmitted" class="file-error-message">Pole wymagane</label>
           </div>
 
           <!-- Submit -->
