Style button opening document creation modal

--- a/restful-dms-ui/src/app/_navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/_navigation/navigation.component.html
@@ -38,14 +38,13 @@
       </a>
 
       <button (click)="openAddDocumentModal()"
-              class="openModalBtn"
-              color="primary"
+              class="primary-button"
               data-target="#basicExample"
               data-toggle="modal" mdbBtn
               mdbWavesEffect
               rounded="true"
               type="button">
-        Launch Modal
+        Utwórz nowy
       </button>
 
 
