--- a/restful-dms-ui/src/app/_file/file.component.html
+++ b/restful-dms-ui/src/app/_file/file.component.html
@@ -38,7 +38,7 @@
       </div>
 
       <!-- Sign in button -->
-      <button block="true" class="my-4 waves-effect z-depth-0 info-color-dark-button" mdbBtn mdbWavesEffect
+      <button block="true" class="my-4 waves-effect z-depth-0 primary-dark-outlined-button" mdbBtn mdbWavesEffect
               outline="true"
               type="submit">
         Sign up
