--- a/restful-dms-ui/src/app/_login/login.component.html
+++ b/restful-dms-ui/src/app/_login/login.component.html
@@ -51,7 +51,8 @@
                 </div>
 
                 <!-- Sign in button -->
-                <button block="true" class="my-4 waves-effect z-depth-0 info-color-dark-button" mdbBtn mdbWavesEffect
+                <button block="true" class="my-4 waves-effect z-depth-0 primary-dark-outlined-button" mdbBtn
+                        mdbWavesEffect
                         outline="true"
                         type="submit">
                   Sign in
@@ -143,7 +144,8 @@
                 </div>
 
                 <!-- Sign in button -->
-                <button block="true" class="my-4 waves-effect z-depth-0 info-color-dark-button" mdbBtn mdbWavesEffect
+                <button block="true" class="my-4 waves-effect z-depth-0 primary-dark-outlined-button" mdbBtn
+                        mdbWavesEffect
                         outline="true"
                         type="submit">
                   Sign up
