--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -20,7 +20,7 @@ main {
   padding: 70px 20px 20px 20px;
 }
 
-.info-color-dark-button {
+.primary-dark-outlined-button {
   border-radius: 20px;
   color: #0099CC;
   border: 2px solid #0099CC;
@@ -29,6 +29,12 @@ main {
 .required-field::after {
   content: "*";
   color: red;
+}
+
+.primary-dark-outlined-button {
+  border-radius: 20px;
+  color: #0099CC;
+  border: 2px solid #0099CC;
 }
 
 .primary-button {
