--- a/restful-dms-ui/src/app/_add-document/add-document.component.html
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.html
@@ -65,8 +65,8 @@
           <div class="md-form file-field">
             <input (change)="onFileChange($event)" id="file" name="file" style="width: 235px" type="file"/>
             <span class="required-field pb-3"></span>
-            <span *ngIf="invalidFileType && file" class="file-error-message">Plik musi być w formacie PDF</span>
-            <span *ngIf="!file && wasSubmitted" class="file-error-message">Pole wymagane</span>
+            <label *ngIf="invalidFileType && file" class="file-error-message">Plik musi być w formacie PDF</label>
+            <label *ngIf="!file && wasSubmitted" class="file-error-message">Pole wymagane</label>
           </div>
 
           <!-- Submit  -->
@@ -99,18 +99,6 @@
           Rozumiem
         </button>
       </div>
-
-      <!--SuccessView Footer-->
-      <!--<div *ngIf="showSuccessView" class="modal-footer justify-content-center">-->
-      <!--<a type="button" mdbBtn color="success" class="waves-effect" mdbWavesEffect>Get it now-->
-      <!--<i class="far fa-gem ml-1"></i>-->
-      <!--</a>-->
-      <!--<a type="button" mdbBtn color="success" outline="true" class="waves-effect" mdbWavesEffect-->
-      <!--(click)="frame.hide()">No, thanks</a>-->
-      <!--</div>-->
-
     </div>
-
-
   </div>
 </div>
