--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 #intro {
-    // background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg');
+  /// background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/Nature/full%20page/img%20%283%29.jpg');
   //background-image: url('https://cdn.pixabay.com/photo/2016/01/16/01/00/blue-1142745_1280.jpg');
   background-image: url('assets/typewriter.jpg');
     background-repeat: no-repeat;
