Add ng-translate initial setup

--- a/restful-dms-ui/src/app/_login/login.component.html
+++ b/restful-dms-ui/src/app/_login/login.component.html
@@ -9,7 +9,7 @@
             <h5 class="card-header
             info-color-dark
             white-text text-center py-4">
-              <strong>{{title}}</strong>
+              <strong>{{ title | translate }}</strong>
             </h5>
 
             <!-- Login form -->
