--- a/restful-dms-ui/src/app/_login/login.component.html
+++ b/restful-dms-ui/src/app/_login/login.component.html
@@ -138,12 +138,12 @@
                   </div>
                 </div>
 
-                <!-- Sign in button -->
+                <!-- Sign up button -->
                 <button block="true" class="my-4 waves-effect z-depth-0 primary-dark-outlined-button" mdbBtn
                         mdbWavesEffect
                         outline="true"
                         type="submit">
-                  {{ 'login.signIn' | translate }}
+                  {{ 'login.signUp' | translate }}
                 </button>
 
                 <p>
