--- a/restful-dms-ui/src/app/_add-document/add-document.component.html
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.html
@@ -11,7 +11,7 @@
       <!--Header-->
       <div class="modal-header text-center info-color-dark">
         <h4
-          class="modal-title white-text  w-100 font-weight-bold py-2">{{ 'add-header.usernameRequired' | translate }}</h4>
+          class="modal-title white-text  w-100 font-weight-bold py-2">{{ 'add-document.header' | translate }}</h4>
         <button (click)="addDocumentModal.hide()" [disabled]="showSpinner" aria-label="Close" class="close"
                 data-dismiss="modal"
                 type="button">
@@ -27,13 +27,13 @@
             <input [validateSuccess]="false" class="form-control" formControlName="title" id="title" mdbInput
                    mdbValidate type="text">
             <label data-error="wrong" data-success="right" for="title">
-              {{ 'add-header.title' | translate }}
+              {{ 'add-document.title' | translate }}
               <span class="required-field"></span>
             </label>
             <mdb-error *ngIf="title.invalid && (title.dirty || title.touched || wasSubmitted)">
-              <span *ngIf="title.errors.required">{{ 'add-header.titleRequired' | translate }}</span>
-              <span *ngIf="title.errors.minlength">{{ 'add-header.titleMin' | translate }}</span>
-              <span *ngIf="title.errors.maxlength">{{ 'add-header.titleMax' | translate }}</span>
+              <span *ngIf="title.errors.required">{{ 'add-document.titleRequired' | translate }}</span>
+              <span *ngIf="title.errors.minlength">{{ 'add-document.titleMin' | translate }}</span>
+              <span *ngIf="title.errors.maxlength">{{ 'add-document.titleMax' | translate }}</span>
             </mdb-error>
           </div>
           <!--Brief-->
@@ -41,13 +41,13 @@
             <input [validateSuccess]="false" class="form-control" formControlName="brief" id="brief" mdbInput
                    mdbValidate type="text">
             <label data-error="wrong" data-success="right" for="brief">
-              {{ 'add-header.brief' | translate }}
+              {{ 'add-document.brief' | translate }}
               <span class="required-field"></span>
             </label>
             <mdb-error *ngIf="brief.invalid && (brief.dirty || brief.touched || wasSubmitted)">
-              <span *ngIf="brief.errors.required">{{ 'add-header.briefRequired' | translate }}</span>
-              <span *ngIf="brief.errors.minlength">{{ 'add-header.briefMin' | translate }}</span>
-              <span *ngIf="brief.errors.maxlength">{{ 'add-header.briefMax' | translate }}</span>
+              <span *ngIf="brief.errors.required">{{ 'add-document.briefRequired' | translate }}</span>
+              <span *ngIf="brief.errors.minlength">{{ 'add-document.briefMin' | translate }}</span>
+              <span *ngIf="brief.errors.maxlength">{{ 'add-document.briefMax' | translate }}</span>
             </mdb-error>
           </div>
           <!--Description-->
@@ -56,10 +56,10 @@
                       id="description" mdbInput mdbValidate rows="3"
                       type="text"></textarea>
             <label for="description">
-              {{ 'add-header.description' | translate }}
+              {{ 'add-document.description' | translate }}
             </label>
             <mdb-error *ngIf="description.invalid && (description.dirty || description.touched || wasSubmitted)">
-              <span *ngIf="description.errors.maxlength">{{ 'add-header.descriptionMax' | translate }}</span>
+              <span *ngIf="description.errors.maxlength">{{ 'add-document.descriptionMax' | translate }}</span>
             </mdb-error>
           </div>
           <!--File-->
@@ -67,9 +67,9 @@
             <input (change)="onFileChange($event)" id="file" name="file" style="width: 235px" type="file"/>
             <span class="required-field pb-3"></span>
             <label *ngIf="invalidFileType && file"
-                   class="file-error-message">{{ 'add-header.fileInvalidFormat' | translate }}</label>
+                   class="file-error-message">{{ 'add-document.fileInvalidFormat' | translate }}</label>
             <label *ngIf="!file && wasSubmitted"
-                   class="file-error-message">{{ 'add-header.fileRequired' | translate }}</label>
+                   class="file-error-message">{{ 'add-document.fileRequired' | translate }}</label>
           </div>
 
           <!-- Submit  -->
