--- a/restful-dms-ui/src/app/_add-document/add-document.component.html
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.html
@@ -64,12 +64,19 @@
           </div>
           <!--File-->
           <div class="md-form file-field">
-            <input (change)="onFileChange($event)" id="file" name="file" style="width: 235px" type="file"/>
-            <span class="required-field pb-3"></span>
-            <label *ngIf="invalidFileType && file"
-                   class="file-error-message">{{ 'add-document.fileInvalidFormat' | translate }}</label>
-            <label *ngIf="!file && wasSubmitted"
-                   class="file-error-message">{{ 'add-document.fileRequired' | translate }}</label>
+            <!--            style="width: 235px; display: none"-->
+            <input (change)="onFileChange($event)" [hidden]="true" id="file" name="file"
+                   type="file"/>
+            <button class="ml-0" color="indigo" id="fileBtn" mdbBtn mdbWavesEffect
+                    onclick="document.getElementById('file').click()" size="sm"
+                    type="button">Choose file
+            </button>
+            <span class="attachFileSpan" onclick="document.getElementById('file').click()" title="attach file">
+              {{ file && file.name ? file.name : ('add-document.noFile' | translate) }}
+           </span>
+            <span class="required-field mt-2"></span>
+            <mdb-error *ngIf="!file && wasSubmitted">{{ 'add-document.fileRequired' | translate }}</mdb-error>
+            <mdb-error *ngIf="invalidFileType && file">{{ 'add-document.fileInvalidFormat' | translate }}</mdb-error>
           </div>
 
           <!-- Submit  -->
