--- a/restful-dms-ui/src/app/_add-document/add-document.component.scss
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.scss
@@ -2,14 +2,10 @@ form div {
   margin-bottom: 30px;
 }
 
-.file-error-message {
-  position: absolute;
-  top: 34px;
-  left: 0;
-  font-size: .8rem;
-  color: #f44336;
-}
-
 #success-icon {
   color: #0099CC;
+}
+
+#fileBtn {
+  box-shadow: none !important;
 }
